# NetOps-Toolkit

./: .gitignore  AGENTS.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cdn.rs  mod.rs  network.rs  ott.rs  system.rs
src-tauri/src/services/: mod.rs  network.rs
src/assets/styles/: main.css
src/components/common/: CommandPalette.vue  ErrorBoundary.vue  LoadingState.vue  StatusCard.vue  StatusIndicator.vue  ToastContainer.vue
src/components/layout/: AppHeader.vue  AppLayout.vue  AppSidebar.vue
src/composables/: useKeyboard.ts  useLogger.ts  useTheme.ts  useToast.ts
src/router/: index.ts
src/services/: cdnService.ts  exportService.test.ts  exportService.ts  networkService.test.ts  networkService.ts  ottService.test.ts  ottService.ts
src/stores/: dashboard.ts  deviceTests.ts  incidentReports.ts  logger.ts  theme.ts  toast.ts
src/types/: env.d.ts  index.ts
src/utils/: icons.ts
src/views/: CdnView.vue  DashboardView.vue  DeviceTestingView.vue  IncidentReportsView.vue  NetworkDiagnosticsView.vue  OttView.vue  UtilitiesView.vue
