[package]
name = "netops-toolkit"
version = "1.0.0"
description = "A unified toolkit for Network Engineers, OTT Engineers, NOC Engineers, SysAdmins, and DevOps Engineers"
authors = ["NetOps Toolkit Team"]
edition = "2021"

[lib]
name = "netops_toolkit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
native-tls = "0.2"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.23"
whois = { version = "1", package = "whois-rs" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
base64 = "0.22"
x509-parser = { version = "0.18", features = ["chrono"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
